[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_mod_picking = "0.17.0"
bevy_xpbd_3d = "0.3.2"
rand = "0.8.5"
bevy_gltf_components = "0.2.0" 
bevy_mod_outline = "0.6"
bevy_mod_billboard = "0.5.1"
bevy_pkv = "0.9.0"
bevy_kira_audio = "0.18.0"

[profile.dev.package."*"]
opt-level = 3
